flux/infrastructure/cms/silex.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: silex
  namespace: cms
  labels:
    app: silex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: silex
  template:
    metadata:
      labels:
        app: silex
    spec:
      containers:
        - name: silex
          image: silexlabs/silex-platform
          resources:
            limits:
              memory: 512Mi
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: root
              mountPath: /silex/storage
            - name: hosting
              mountPath: /silex/hosting
      volumes:
        - name: root
          persistentVolumeClaim:
            claimName: silex-root
        - name: hosting
          persistentVolumeClain:
            claimName: silex-hosting

---
apiVersion: v1
kind: Service
metadata:
  name: silex
  namespace: cms
spec:
  selector:
    app: silex
  ports:
    - name: http
      port: 8888
      targetPort: 8888
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: silex
  namespace: cms
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`silex.becklab.cloud`)
      middlewares:
        - name: sso-admin-chain
          namespace: identity
      services:
        - name: silex
          port: 8888
  tls:
    secretName: silex-tls
